structmeta-tests/tests/compile_fail/struct_meta/expected_name_value_but_flag.rs
#[structmeta_tests::attr_name_value(value)]
fn my_func() {}

fn main() {}
